--- a/feat-c.html
+++ b/feat-c.html
@@ -9,5 +9,6 @@
     <h1>feature c</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis reprehenderit labore eum sint similique fugiat molestias vel hic libero aspernatur autem ex id, quia laboriosam culpa deleniti veniam. Repudiandae, reprehenderit.
     Veritatis, dolores debitis dolor totam magni voluptatum saepe dolore, soluta eos iure molestiae vero, odio minus tenetur in. Error itaque enim vitae nihil numquam perferendis, ea laborum quis eligendi labore!</p>
+    <a>click me</a>
 </body>
 </html>
